Cambio de tipografía título y sección qué es bapster en inglés.

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
     <div class="caption center-block text-center">
 
-        <div class="os-animation" data-animation="fadeInDown" data-delay = ".8s">
+        <div id="primary_title" class="os-animation" data-animation="fadeInDown" data-delay = ".8s">
             <h1>BAPSTER</h1>
         </div>
 
@@ -144,9 +144,11 @@
     <div class="os-animation" data-animation="fadeInUp">
         <div class="narrow text-center">
             <div class="col-12">
-                <h1 style="color: #1b1e21">Bapster trading company</h1>
-                <p class="lead" style="color: #1b1e21">
-                    **QUÉ ES BAPSTER**
+                <h1 style="color: #1b1e21">¿WHAT IS BAPSTER?</h1>
+                <p class="lead content_text" style="color: #1b1e21">
+                    It is a 100% Mexican company of world class dedicated to creating connections for buying and selling products 
+                    as well as logistics solutions in freight transport worldwide, focused on finding the balance between price and quality 
+                    to meet the needs of our client.
                 </p>
                 <a href="#contact" class="btn btn-black btn-sm">
                     Request information
