--- a/spa/index.html
+++ b/spa/index.html
@@ -109,7 +109,7 @@
 
     <div class="caption center-block text-center">
 
-        <div class="os-animation" data-animation="fadeInDown" data-delay = ".8s">
+        <div id="primary_title" class="os-animation" data-animation="fadeInDown" data-delay = ".8s">
             <h1>BAPSTER</h1>
         </div>
 
