Qué es bapster en español.

--- a/spa/index.html
+++ b/spa/index.html
@@ -143,9 +143,11 @@
     <div class="os-animation" data-animation="fadeInUp">
         <div class="narrow text-center">
             <div class="col-12">
-                <h1 style="color: #1b1e21">Bapster trading company</h1>
-                <p class="lead" style="color: #1b1e21">
-                    **QUÉ ES BAPSTER**
+                <h1 style="color: #1b1e21">¿QUÉ ES BAPSTER?</h1>
+                <p class="lead content_text" style="color: #1b1e21">
+                    Es una empresa 100% mexicana de clase mundial dedicada a crear conexiones de venta y compra de productos así como 
+                    soluciones logísticas en el transporte de mercancias a nivel mundial, enfocados a 
+                    encontrar el equilibrio entre precio y calidad para satisfacer las necesidades de nuestros clientes.                    
                 </p>
                 <a href="#contact" class="btn btn-black btn-sm">
                     Contáctanos
