Misión visión y valores en inglés.

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
     <div class="os-animation" data-animation="fadeInUp">
         <div class="narrow text-center">
             <div class="col-12">
-                <h1 style="color: #1b1e21">¿WHAT IS BAPSTER?</h1>
+                <h1 style="color: #1b1e21">¿What is BAPSTER?</h1>
                 <p class="lead content_text" style="color: #1b1e21">
                     It is a 100% Mexican company of world class dedicated to creating connections for buying and selling products 
                     as well as logistics solutions in freight transport worldwide, focused on finding the balance between price and quality 
@@ -167,49 +167,53 @@
         <div class="row dark">
             <div class="col-12 os-animation" data-animation="fadeInUp">
                 <h3 class="heading" style="color: white;">
-                    BAPSTER
+                    Vision/Mission/Values
                 </h3>
                 <div class="heading-underline"></div>
             </div>
 
             <div class="col-md-4">
                 <div class="os-animation" data-animation="fadeInLeft">
-                    <h3>MISIÓN</h3>
+                    <h3>VISION</h3>
                     <div class="feature">
                         <span class="fa-layers fa-3x">
                             <i class="fas fa-eye" style="color: #cbad14;"></i>
                         </span>
                     </div>
                     <p class="lead">
-                        Lorem ipsum dolor sit amet
+                        Establish the Bapster Trading Company worldwide, leading the trading of national products, committed to the service.
                     </p>
                 </div>
             </div>
 
             <div class="col-md-4">
                 <div class="os-animation" data-animation="fadeInUp">
-                    <h3>VISIÓN</h3>
-                    <div class="feature">
-                        <span class="fa-layers fa-3x">
-                            <i class="fas fa-american-sign-language-interpreting" style="color: #cbad14;"></i>
-                        </span>
-                    </div>
-                    <p class="lead">
-                        Lorem ipsum dolor sit amet
-                    </p>
-                </div>
-            </div>
-
-            <div class="col-md-4">
-                <div class="os-animation" data-animation="fadeInRight">
-                    <h3>VALORES</h3>
+                    <h3>MISSION</h3>
                     <div class="feature">
                         <span class="fa-layers fa-3x">
                             <i class="fas fa-chess-knight" style="color: #cbad14;"></i>
                         </span>
                     </div>
                     <p class="lead">
-                        Lorem ipsum dolor sit amet
+                        Provide the best trading service to importers and exporters nationally and internationally, 
+                        offering an honest deal, responsible and fraternal with mutual interest.
+                    </p>
+                </div>
+            </div>
+
+            <div class="col-md-4">
+                <div class="os-animation" data-animation="fadeInRight">
+                    <h3>VALUES</h3>
+                    <div class="feature">
+                        <span class="fa-layers fa-3x">
+                            <i class="fas fa-handshake" style="color: #cbad14;"></i> 
+                        </span>
+                    </div>
+                    <p class="lead">
+                            Responsibility & Honesty<br/>
+                            Social commitment & sustainable<br/>
+                            Quality & Punctuality<br/>
+                            Teamwork                    
                     </p>
                 </div>
             </div>
@@ -228,12 +232,12 @@
     <div class="jumbotron">
         <div class="narrow">
         <div class="os-animation" data-animation="fadeInUp">
-            <h3 class="heading">Features</h3>
+            <h3 class="heading">Services</h3>
             <div class="heading-underline"></div>
         </div>
 
         <div class="row">
-            <div class="col-sm-6 col-md-4">
+            <div class="col-sm-6 col-md-6">
                 <div class="os-animation" data-animation="fadeInLeft">
                     <div class="feature">
                             <span class="fa-layers fa-4x">
@@ -248,22 +252,7 @@
                 </div>
             </div>
 
-            <div class="col-sm-6 col-md-4">
-                <div class="os-animation" data-animation="fadeInUp">
-                    <div class="feature">
-                            <span class="fa-layers fa-4x">
-                                <i class="fa fa-circle" style="color: #1d1c1c;"></i>
-                                <i class="fas fa-mobile-alt fa-inverse" data-fa-transform="shrink-6 right-.25"></i>
-                            </span>
-                        <h3>Bapster trading company</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur
-                            adipiscing elit, sed do eiusmod tempor
-                        </p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-sm-6 col-md-4">
+            <div class="col-sm-6 col-md-6">
                 <div class="os-animation" data-animation="fadeInRight">
                     <div class="feature">
                             <span class="fa-layers fa-4x">
@@ -279,113 +268,6 @@
             </div>
         </div> <!-- END OF THE ROW-->
     </div> <!-- End narrow -->
-        <div class="narrow">
-            <div class="os-animation" data-animation="fadeInUp">
-                <h3 class="heading">Features</h3>
-                <div class="heading-underline"></div>
-            </div>
-
-            <div class="row">
-                <div class="col-sm-6 col-md-4">
-                    <div class="os-animation" data-animation="fadeInLeft">
-                        <div class="feature">
-                            <span class="fa-layers fa-4x">
-                                <i class="fa fa-circle" style="color: #1d1c1c;"></i>
-                                <i class="fas fa-mobile-alt fa-inverse" data-fa-transform="shrink-6 right-.25"></i>
-                            </span>
-                            <h3>Bapster trading company</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur
-                                adipiscing elit, sed do eiusmod tempor
-                            </p>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-sm-6 col-md-4">
-                    <div class="os-animation" data-animation="fadeInUp">
-                        <div class="feature">
-                            <span class="fa-layers fa-4x">
-                                <i class="fa fa-circle" style="color: #1d1c1c;"></i>
-                                <i class="fas fa-mobile-alt fa-inverse" data-fa-transform="shrink-6 right-.25"></i>
-                            </span>
-                            <h3>Bapster trading company</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur
-                                adipiscing elit, sed do eiusmod tempor
-                            </p>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-sm-6 col-md-4">
-                    <div class="os-animation" data-animation="fadeInRight">
-                        <div class="feature">
-                            <span class="fa-layers fa-4x">
-                                <i class="fa fa-circle" style="color: #1d1c1c;"></i>
-                                <i class="fas fa-mobile-alt fa-inverse" data-fa-transform="shrink-6 right-.25"></i>
-                            </span>
-                            <h3>Bapster trading company</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur
-                                adipiscing elit, sed do eiusmod tempor
-                            </p>
-                        </div>
-                    </div>
-                </div>
-            </div> <!-- END OF THE ROW-->
-
-        </div> <!-- End narrow -->
-        <div class="narrow">
-            <div class="os-animation" data-animation="fadeInUp">
-                <h3 class="heading">Features</h3>
-                <div class="heading-underline"></div>
-            </div>
-
-            <div class="row">
-                <div class="col-sm-6 col-md-4">
-                    <div class="os-animation" data-animation="fadeInLeft">
-                        <div class="feature">
-                            <span class="fa-layers fa-4x">
-                                <i class="fa fa-circle" style="color: #1d1c1c;"></i>
-                                <i class="fas fa-mobile-alt fa-inverse" data-fa-transform="shrink-6 right-.25"></i>
-                            </span>
-                            <h3>Bapster trading company</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur
-                                adipiscing elit, sed do eiusmod tempor
-                            </p>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-sm-6 col-md-4">
-                    <div class="os-animation" data-animation="fadeInUp">
-                        <div class="feature">
-                            <span class="fa-layers fa-4x">
-                                <i class="fa fa-circle" style="color: #1d1c1c;"></i>
-                                <i class="fas fa-mobile-alt fa-inverse" data-fa-transform="shrink-6 right-.25"></i>
-                            </span>
-                            <h3>Bapster trading company</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur
-                                adipiscing elit, sed do eiusmod tempor
-                            </p>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-sm-6 col-md-4">
-                    <div class="os-animation" data-animation="fadeInRight">
-                        <div class="feature">
-                            <span class="fa-layers fa-4x">
-                                <i class="fa fa-circle" style="color: #1d1c1c;"></i>
-                                <i class="fas fa-mobile-alt fa-inverse" data-fa-transform="shrink-6 right-.25"></i>
-                            </span>
-                            <h3>Bapster trading company</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur
-                                adipiscing elit, sed do eiusmod tempor
-                            </p>
-                        </div>
-                    </div>
-                </div>
-            </div> <!-- END OF THE ROW-->
-        </div> <!-- End narrow -->
     </div>
 </div>
 <!-- Start portfolio section -->
