--- a/index.html
+++ b/index.html
@@ -242,11 +242,12 @@
                     <div class="feature">
                             <span class="fa-layers fa-4x">
                                 <i class="fa fa-circle" style="color: #1d1c1c;"></i>
-                                <i class="fas fa-mobile-alt fa-inverse" data-fa-transform="shrink-6 right-.25"></i>
+                                <i class="fas fa-user-tie" data-fa-transform="shrink-6 right-.25" style="color: white"></i>
+                                <!-- <i class="fas fa-mobile-alt fa-inverse" data-fa-transform="shrink-6 right-.25"></i> -->
                             </span>
-                        <h3>Bapster trading company</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur
-                            adipiscing elit, sed do eiusmod tempor
+                        <h3>Connection with customers and suppliers</h3>
+                        <p>
+                                Search and market analysis that suits the need of your product.
                         </p>
                     </div>
                 </div>
@@ -257,11 +258,12 @@
                     <div class="feature">
                             <span class="fa-layers fa-4x">
                                 <i class="fa fa-circle" style="color: #1d1c1c;"></i>
-                                <i class="fas fa-mobile-alt fa-inverse" data-fa-transform="shrink-6 right-.25"></i>
+                                <i class="fas fa-globe" data-fa-transform="shrink-6 right-.25" style="color: white"></i>
+                                <!-- <i class="fas fa-mobile-alt fa-inverse" data-fa-transform="shrink-6 right-.25"></i> -->
                             </span>
-                        <h3>Bapster trading company</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur
-                            adipiscing elit, sed do eiusmod tempor
+                        <h3>International logistics</h3>
+                        <p>
+                                Consulting and logistics services in freight transport.
                         </p>
                     </div>
                 </div>
