Cambios vision,mission,values

--- a/index.html
+++ b/index.html
@@ -195,25 +195,25 @@
                         </span>
                     </div>
                     <p class="lead">
-                        Provide the best trading service to importers and exporters nationally and internationally, 
-                        offering an honest deal, responsible and fraternal with mutual interest.
+                            Provide the best trading service to importers and exporters nationally and internationally, 
+                            offering and honest deal, responsible <br/> and fraternal with mutual interest.
                     </p>
                 </div>
             </div>
 
             <div class="col-md-4">
                 <div class="os-animation" data-animation="fadeInRight">
-                    <h3>VALUES</h3>
+                        <h3>VALUES</h3>
                     <div class="feature">
                         <span class="fa-layers fa-3x">
                             <i class="fas fa-handshake" style="color: #cbad14;"></i> 
                         </span>
                     </div>
                     <p class="lead">
-                            Responsibility & Honesty<br/>
-                            Social commitment & sustainable<br/>
-                            Quality & Punctuality<br/>
-                            Teamwork                    
+                            Responsibility & Honesty,
+                            Social commitment & sustainable,
+                            Quality & Punctuality,<br/>
+                            Teamwork.                                    
                     </p>
                 </div>
             </div>
