--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#products">Products</a>
                     </li>
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a class="nav-link" href="#team">Team</a>
-                    </li>
+                    </li> -->
                     <li class="nav-item">
                         <a class="nav-link" href="#contact">Contact</a>
                     </li>
@@ -237,7 +237,7 @@
         </div>
 
         <div class="row">
-            <div class="col-sm-6 col-md-6">
+            <div class="col-sm-6 col-md-4">
                 <div class="os-animation" data-animation="fadeInLeft">
                     <div class="feature">
                             <span class="fa-layers fa-4x">
@@ -245,15 +245,30 @@
                                 <i class="fas fa-user-tie" data-fa-transform="shrink-6 right-.25" style="color: white"></i>
                                 <!-- <i class="fas fa-mobile-alt fa-inverse" data-fa-transform="shrink-6 right-.25"></i> -->
                             </span>
+                            <h3>Meet our own products</h3>
+                            <p>
+                                Marketing of our own brands.
+                            </p>
+                        </div>
+                    </div>
+            </div>
+            
+            <div class="col-sm-6 col-md-4">
+                <div class="os-animation" data-animation="fadeInUp">
+                    <div class="feature">
+                        <span class="fa-layers fa-4x">
+                            <i class="fa fa-circle" style="color: #1d1c1c;"></i>
+                            <i class="fas fa-mobile-alt fa-inverse" data-fa-transform="shrink-6 right-.25"></i>
+                        </span>
                         <h3>Connection with customers and suppliers</h3>
                         <p>
                                 Search and market analysis that suits the need of your product.
                         </p>
+                        </div>
                     </div>
                 </div>
-            </div>
 
-            <div class="col-sm-6 col-md-6">
+            <div class="col-sm-6 col-md-4">
                 <div class="os-animation" data-animation="fadeInRight">
                     <div class="feature">
                             <span class="fa-layers fa-4x">
@@ -263,7 +278,7 @@
                             </span>
                         <h3>International logistics</h3>
                         <p>
-                                Consulting and logistics services in freight transport.
+                                Consulting and logistics services in freight <br/>transport.
                         </p>
                     </div>
                 </div>
@@ -374,16 +389,16 @@
     <div class="os-animation" data-animation="fadeInUp">
         <div class="narrow text-center">
             <div class="col-12">
-                <p class="lead" style="color: #1b1e21">
+                <!-- <p class="lead" style="color: #1b1e21">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
                     labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
                     aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore
                     eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
                     deserunt mollit anim id est laborum.
-                </p>
-                <a href="#contact" class="btn btn-black btn-sm">
+                </p> -->
+                <!-- <a href="#contact" class="btn btn-black btn-sm">
                     Get in touch
-                </a>
+                </a> -->
             </div>
         </div>
     </div>
@@ -481,7 +496,7 @@
     <!-- FIXED BACKGROUND IMG-->
 
     <div class="fixed-background">
-        <div class="row light">
+        <!-- <div class="row light">
 
 
             <div class="col-12 os-animation" data-animation="fadeInUp">
@@ -551,7 +566,7 @@
                 </div>
             </div>
 
-        </div>
+        </div> -->
 
         <div class="fixed-wrap">
             <div id="fixed-2">
